force-app/main/default/objects/Contact/fields/BetterRewards_ID__c.field-meta.xml
<CustomField>
    <fullName>BetterRewards_ID__c</fullName>
    <label>BetterRewards ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>