force-app/main/default/objects/Contact/fields/Entity_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Contact_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Entity Contact Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>