force-app/main/default/objects/Contact/fields/ID_Number_Passport__c.field-meta.xml
<CustomField>
    <fullName>ID_Number_Passport__c</fullName>
    <label>ID Number / Passport</label>
    <length>25</length>
    <type>Text</type>
</CustomField>